force-app/main/default/objects/df_160_prod_sel_totals_sublist__c/df_160_prod_sel_totals_sublist__c.object-meta.xml
<CustomObject>
    <label>Totals</label>
    <nameField>
        <label>Totals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Totalss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>