force-app/main/default/objects/df_160_prod_sel_totals_sublist__c/fields/prod_sel_totals_total__c.field-meta.xml
<CustomField>
    <fullName>prod_sel_totals_total__c</fullName>
    <label>Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>