force-app/main/default/objects/df_160_prod_sel_totals_sublist__c/fields/version__c.field-meta.xml
<CustomField>
    <fullName>version__c</fullName>
    <label>version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>